[package]
name = "philiprehberger-secret-store"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Philip Rehberger"]
description = "Secure in-memory secret storage with automatic zeroization, expiry, and redacted display"
license = "MIT"
readme = "README.md"
repository = "https://github.com/philiprehberger/rs-secret-store"
documentation = "https://docs.rs/philiprehberger-secret-store"
keywords = ["secret", "security", "zeroize", "sensitive", "redact"]
categories = ["cryptography"]

[dependencies]
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = []
serde = ["dep:serde"]
